Cart Page Included

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
         <div class="logo">
             <a href="#" class="logo"><i class="far fa-heart"></i></a>
-            <a href="" class="logo"><i class="fas fa-user"></i></a>
-            <a href="" class="logo"><i class="fas fa-shopping-cart"></i></a>
+            <a href="/sign.html" class="logo"><i class="fas fa-user"></i></a>
+            <a href="/cart.html" class="logo"><i class="fas fa-shopping-cart"></i></a>
 
         </div>
 
