--- a/cart.html
+++ b/cart.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Shopping Cart UI</title>
-	<link rel="stylesheet" type="text/css" href="/cartsyle.css">
+	<link rel="stylesheet" type="text/css" href="cartsyle.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,900" rel="stylesheet">
 </head>
 <body>
@@ -14,12 +14,12 @@
 
    	   <div class="Cart-Items">
    	   	  <div class="image-box">
-   	   	  	<img src="/img/Truffle.jpg" style="height: 120px;"/>
+   	   	  	<img src="img/Truffle.jpg" style="height: 120px;"/>
    	   	  </div>
    	   	  <div class="about">
    	   	  	<h1 class="title">Truffle</h1>
    	   	  	<h3 class="subtitle">250mg</h3>
-   	   	  	<img src="/img/veg.png" style="height: 30px;"/>
+   	   	  	<img src="img/veg.png" style="height: 30px;"/>
    	   	  </div>
    	   	  <div class="counter">
    	   	  	<div class="btn">+</div>
@@ -35,12 +35,12 @@
 
    	   <div class="Cart-Items pad">
    	   	  <div class="image-box">
-   	   	  	<img src="/img/Pinky Bliss.jpg"  style="height: 120px;" />
+   	   	  	<img src="img/Pinky Bliss.jpg"  style="height: 120px;" />
    	   	  </div>
    	   	  <div class="about">
    	   	  	<h1 class="title">Pinky Bliss</h1>
    	   	  	<h3 class="subtitle">250mg</h3>
-   	   	  	<img src="/img/veg.png" style="height: 40px;"/>
+   	   	  	<img src="img/veg.png" style="height: 40px;"/>
    	   	  </div>
    	   	  <div class="counter">
    	   	  	<div class="btn">+</div>
