--- a/sign.html
+++ b/sign.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Mrm Task 1</title>
-    <link rel="stylesheet" type="text/css" href="/slide navbar style.css" />
+    <link rel="stylesheet" type="text/css" href="slide navbar style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap"
       rel="stylesheet"
